--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="inline-block">
+  <div class="inline-block left">
     <p>契約者名</p>
     <input type="text" class="box">
   </div>
@@ -16,10 +16,13 @@
     <p>事故検知日時</p>
     <p>{{year}}年{{month}}月{{day}}日{{hour}}:{{min}}:{{second}}</p>
   </div>
+  <div class="v_line_fix"></div>
   <div class="inline-block">
     <p>事故検知地点</p>
+    <p>{{location}}</p>
   </div>
-  <div class="inline-block">
+  <div class="v_line_fix"></div>
+  <div class="inline-block right">
     <p>車両番号</p>
     <input type="text" class="box">
   </div>
