--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,8 +1,8 @@
-<div class="my-google-map">
+<!-- <div class="my-google-map">
   <google-map [options]="mapOptions">
      <map-marker [position]="marker.position"></map-marker>
   </google-map>
 </div>
 
 
-{{ center.lat }}
+{{ center.lng }} -->
