--- a/src/app/car-info/car-info.component.html
+++ b/src/app/car-info/car-info.component.html
@@ -1,4 +1,19 @@
-<div>
+<div id="carInfo-wrap">
+    <p>steering</p>
+    <p>{{steering}}</p>
+    <p>headlamp</p>
+    <p>{{headlamp}}</p>
+    <p>stoplamp</p>
+    <p>{{stoplamp}}</p>
+    <p>turnlamp</p>
+    <p>{{turnlamp}}</p>
+    <p>pcs1</p>
+    <p>{{pcs1}}</p>
+    <p>pcs2</p>
+    <p>{{pcs2}}</p>
+</div>
+
+<!-- <div>
   <p>steering</p>
   <p>{{steering}}</p>
 </div>
@@ -21,4 +36,4 @@
 <div>
   <p>pcs2</p>
   <p>{{pcs2}}</p>
-</div>
+</div> -->
