--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,8 +1,6 @@
-<!-- <div class="my-google-map">
-  <google-map [options]="mapOptions">
+<div class="gmap-wrap">
+  <google-map [options]="mapOptions" width="100%" height="100%">
      <map-marker [position]="marker.position"></map-marker>
   </google-map>
 </div>
 
-
-{{ center.lng }} -->
