--- a/src/app/streerview/streerview.component.html
+++ b/src/app/streerview/streerview.component.html
@@ -1,3 +1,3 @@
-<div class="my-google-map">
-  <google-map [width]="800" [height]="600"></google-map>
+<div class="gmap-wrap">
+  <google-map width="100%" height="100%"></google-map>
 </div>
