--- a/src/app/memo/memo.component.html
+++ b/src/app/memo/memo.component.html
@@ -1,5 +1,5 @@
 <div id="memo-wrap">
-  <p>memo works!ああああ</p>
-  <p>memo works!ああああ</p>
-  <p>memo works!ああああ</p>
+  <p>memo works!</p>
+  <p>memo works!</p>
+  <p>memo works!</p>
 </div>
