--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,28 +1,28 @@
 <div class="header">
-  <div class="inline-block left">
+  <div class="inline-block left input">
     <p>契約者名</p>
     <input type="text" class="box">
   </div>
-  <div class="inline-block">
+  <div class="inline-block input">
     <p>運転者名</p>
     <input type="text" class="box">
   </div>
-  <div class="inline-block">
+  <div class="inline-block carInfo">
     <p>証券番号</p>
-    <p>{{ vin }}</p>
+    <p class="Info">{{ vin }}</p>
   </div>
   <div class="v_line_fix"></div>
-  <div class="inline-block">
+  <div class="inline-block carInfo">
     <p>事故検知日時</p>
-    <p>{{year}}年{{month}}月{{day}}日{{hour}}:{{min}}:{{second}}</p>
+    <p class="Info">{{year}}年{{month}}月{{day}}日{{hour}}:{{min}}:{{second}}</p>
   </div>
   <div class="v_line_fix"></div>
-  <div class="inline-block">
+  <div class="inline-block carInfo">
     <p>事故検知地点</p>
-    <p>{{location}}</p>
+    <p class="Info">{{location}}</p>
   </div>
   <div class="v_line_fix"></div>
-  <div class="inline-block right">
+  <div class="inline-block input right">
     <p>車両番号</p>
     <input type="text" class="box">
   </div>
