--- a/src/app/display/display.component.scss
+++ b/src/app/display/display.component.scss
@@ -6,22 +6,21 @@
   height: 10%;
 }
 #contents {
-  background-color: coral;
   float: left;
-  width: 95%;
-  height: 80%;
+  width: 95.5%;
+  height: 82%;
+  background-color: #bad3ff;
 }
-#toggle {
-  background-color: crimson;
+#side-bar {
   float: right;
-  width: 5%;
-  height: 80%;
+  width: 4.5%;
+  height: 82%;
 }
 #timeBar {
-  background-color: darkkhaki;
+  background-color: black;
   clear: both;
   width: 100%;
-  height: 10%;
+  height: 8%;
 }
 
 //contentsの中身
@@ -33,63 +32,135 @@
   width: 50%;
   height: 50%;
 }
-#map {
-  background-color: darkmagenta;
-}
-#memo {
-  background-color: white;
-}
+
 // #streetView{}
 // #carInfo{}
 
-// toggle
+// アイコン
 .wrapper {
   display: inline-flex;
   flex-direction: column;
   width: 100%;
 }
-// アイコン
-img {
-  width: 40px;
-  margin-top: 5px;
-  margin-left: auto;
+mat-icon {
+  font-size: 35px;
+  margin-left: 20%;
+  color: black;
+  margin-top: 5%;
 }
-.mat-icon {
-  font-size: 46px;
-  margin-top: 1%;
-  margin-left: auto;
-  padding-right: 20px;
+.icon {
+  width: 100%;
 }
 .chart {
   padding-top: 0.5%;
 }
-.save {
-  margin-left: auto;
-  border-color: black;
-  margin-top: 1%;
+
+.icon:hover {
+  background-color: #0099ff;
+  mat-icon {
+    color: white;
+  }
 }
-.btn1 {
-  // margin-top: 2%;
-  font-size: 18px;
-  text-align: right;
-  background-color: #fff;
-  color: black;
-  text-decoration: none;
-  border: 1px solid;
-  border-radius: 4px;
-  border-color: black;
-  padding: 2px;
+.dispalyOn {
+  background-color: #0099ff;
+  .display-btn {
+    color: white;
+  }
 }
 
-//toggleスイッチ
-.toggle-wrapper {
-  align-items: flex-end;
-  margin-top: 20%;
+.btn-wrapper {
+  height: 35%;
 }
+.blank {
+  height: 17%;
+}
+.toggle-wrapper {
+  height: 30%;
+}
+//スイッチ
+
 .toggle-label {
   margin-bottom: 0px;
-  font-size: 15px;
-  text-align: right;
-  margin-right: 5px;
+  font-size: 11px;
+  text-align: center;
   margin-top: 2%;
 }
+label {
+  margin-left: 20%;
+}
+
+//timebar
+.timebar-wrapper {
+  display: flex;
+}
+.progress-bar {
+  width: 90%;
+}
+.progress-wrapper {
+  float: left;
+}
+.progress-bar {
+  padding-top: 1.2%;
+}
+
+//timebar-button
+span {
+  color: white;
+  background-color: transparent;
+}
+.substractTenBtn,
+.addTenBtn {
+  font-size: 30px;
+  padding-top: 10%;
+}
+.substractOneBtn,
+.addOneBtn {
+  font-size: 35px;
+}
+.substractTenBtn {
+  padding-left: 15%;
+}
+.time-bar-btn:hover {
+  background-color: white;
+  .material-icons {
+    color: black;
+  }
+}
+.progress-wrapper {
+  padding-left: 49%;
+}
+.progress {
+  z-index: 2;
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  color: white;
+}
+
+// img {
+//   width: 40px;
+//   margin-top: 5px;
+//   margin-left: auto;
+//   color: black;
+// }
+// .btn1 {
+//   // margin-top: 2%;
+//   font-size: 18px;
+//   text-align: right;
+//   background-color: #fff;
+//   color: black;
+//   text-decoration: none;
+//   border: 1px solid;
+//   border-radius: 4px;
+//   border-color: black;
+//   padding: 2px;
+// }
+// .save {
+//   margin-left: auto;
+//   border-color: black;
+//   margin-top: 1%;
+// }
+// .toggle-wrapper {
+//   align-items: flex-end;
+//   margin-top: 20%;
+// }
