--- a/src/app/display/display.component.scss
+++ b/src/app/display/display.component.scss
@@ -3,24 +3,24 @@
   height: 100vh;
 }
 #header {
-  height: 10%;
+  height: 10vh;
 }
 #contents {
   float: left;
   width: 95.5%;
-  height: 82%;
+  height: 82vh;
   background-color: #bad3ff;
 }
 #side-bar {
   float: right;
-  width: 4.5%;
-  height: 82%;
+  width: 4.5vw;
+  height: 82vh;
 }
 #timeBar {
   background-color: black;
   clear: both;
-  width: 100%;
-  height: 8%;
+  width: 100vw;
+  height: 8vh;
 }
 
 //contentsの中身
@@ -46,13 +46,13 @@ mat-icon {
   font-size: 35px;
   margin-left: 20%;
   color: black;
-  margin-top: 5%;
+  margin-top: 0.5vh;
 }
 .icon {
   width: 100%;
 }
 .chart {
-  padding-top: 0.5%;
+  padding-top: 0.05vh;
 }
 
 .icon:hover {
