--- a/src/app/memo/memo.component.scss
+++ b/src/app/memo/memo.component.scss
@@ -2,7 +2,38 @@
   padding: 0;
   height: 100%;
   background-color: white;
+  position: relative;
 }
 p {
   margin-top: 0;
+}
+#memoDisplay {
+  padding-top: 3%;
+}
+.memo-registar {
+  height: 5%;
+  width: 30%;
+  z-index: 5;
+  position: fixed;
+  top: 45%;
+  right: 5%;
+  display: flex;
+}
+
+input {
+  width: 80%; /*親要素いっぱい広げる*/
+  padding: 10px 12px; /*ボックスを大きくする*/
+  font-size: 12px;
+  border-radius: 2px; /*ボックス角の丸み*/
+  border: 0.05px solid #59546b; /*枠線*/
+  box-sizing: border-box; /*横幅の解釈をpadding, borderまでとする*/
+}
+
+button {
+  color: rgba(30, 22, 54, 0.6);
+}
+
+button:hover {
+  color: rgba(255, 255, 255, 0.85);
+  box-shadow: rgba(30, 22, 54, 0.7) 0 80px 0px 2px inset;
 }
